--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "memebot-server",
+  "name": "openai-api-server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,7 +11,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@google-cloud/text-to-speech": "^4.2.2",
     "cors": "^2.8.5",
     "dotenv": "^16.1.1",
     "express": "^4.18.2",
@@ -19,11 +18,9 @@
     "fluent-ffmpeg": "^2.1.2",
     "form-data": "^4.0.0",
     "microsoft-cognitiveservices-speech-sdk": "^1.31.0",
-    "mqtt": "^4.3.7",
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^2.6.11",
     "openai": "^3.3.0",
-    "socket.io": "^4.7.1",
     "ytdl-core": "4.10.0"
   }
 }
